# conscience

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test_doctest.py
.github/workflows/: publish.yml  test.yml
conscience/: __init__.py  common.py  config.py  formatters.py  main.py  parsers.py  score.py  suite.py
conscience/lobes/: lobe.py
director/: __init__.py  common.py  design.py  feature.py  formats.py  formatters.py  grid.py  identify.py  images.py  mocking.py  parsers.py  suite.py  window.py
director/features/: after.py  design.py  keyboard.py  menu.py
director/lib/: __init__.py  identify.py  mocking.py
director/lobes/: __init__.py  after.py  design.py  keyboard.py  lobe.py  menu.py  messagebox.py  tk_lifecycle.py
gradescope/: Dockerfile
gradescope/container/: a3.py  a3_support.py  director  lint.yml  metadata  run_autograder  setup.sh  task1.py  task2.py  testrunner.py  tests  tests1  tests2
tests/: test_dayz.py  test_environment.py  test_hello_world.py  test_mocking.py
tests/dayz/: dayz.py
tests/dayz/features/: 00_display_gui.feature  environment.py
tests/dayz/maps/: basic5.txt
tests/dayz/steps/: common.py
tests/hacker/: a3.py
tests/hello_world/: hello_world_gui.py
tests/hello_world_tests/: common.py  environment.py
tests/hello_world_tests/steps/: common.py
tests/test_hello_world/: common.py  environment.py  test_hello_world.py
tests/test_hello_world/features/: functions.feature
